js262/test/language/expressions/class/elements/syntax/early-errors/grammar-static-privatename-constructor.js


/*---
description: Static Private Fields cannot be named constructor (class expression)
esid: prod-ClassElement
features: [class-static-fields-private, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Class Definitions / Static Semantics: Early Errors

    ClassElementName : PrivateName ;
        It is a Syntax Error if StringValue of PrivateName is "#constructor"

---*/


$DONOTEVALUATE();

var C = class {
  static #constructor
};
